@@ -462,7 +462,7 @@ SEE ALSO
         Install the Error::Pure modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Error-Pure-Output-ANSIColor>
+    <https://github.com/michal-josef-spacek/Error-Pure-Output-ANSIColor>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
