@@ -3,6 +3,7 @@
  - Fix err_print() to ANSI output.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update and fix copyright years.
+ - Update author github name.
  - Update Module::Install to 1.19 version.
 
 0.03 2017-04-02T19:38:25+02:00
